
2012-10-01 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Wrong bit mask for extra bits in Hantek::Control::getData

2012-10-02 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Hantek::Control redesign missing for used channels
* Bugfix: Always check DataAnalyzer::data for null pointer

2012-10-03 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Add CAPTURE_READY2250 for the DSO-2250

2012-10-07 Oliver Haag  <oliver.haag@gmail.com>
* Ignore errors after first packet was received by Hantek::Device::bulkReadMulti

2012-10-17 Oliver Haag  <oliver.haag@gmail.com>
* Change back workaround for Mac OS that is most probably not required anymore
* Various performance improvements and small fixes
* New cppcheck build target

2012-10-28 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: DSO-2250 support, thanks to Dmitry Kolyadintsev
* Bugfix: Remove invalid divider for large buffers

2012-11-05 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: short instead of long int for DSO-2250 trigger offset

2012-11-05 Oliver Haag  <oliver.haag@gmail.com>
* Added new SiSpinBox
* Replaced ComboBox with SiSpinBox for time- and frequencybase

2012-11-21 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: DSO-2250 detection failed

2012-11-25 Oliver Haag  <oliver.haag@gmail.com>
* Added samplerate spinbox to horizontal dock
* Moved record length selection from menu into horizontal dock
* Large rework to allow setting either samplerate or timebase
* Calculate the samplerate depending on the set parameter and the record length
* Added signals to DsoControl to update horizontal dock automatically
* Reworks in signal connections to make this work properly
* Bugfix: DSO-2250 used channels wasn't set

2012-11-26 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Roll mode caused crash or hanging
* Bugfix: DSO-2150 samplerate maximum was 100 MS/s

2012-11-27 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Hantek::Control::setChannelUsed used setTrigger instead of setChannels